<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <TextView
            android:text="@string/app_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            app:layout_constraintTop_toTopOf="parent" android:textSize="30sp" android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.494"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/docNameInputField"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/searchForDoc"
            android:hint="@string/search_doc_hint" android:autofillHints="" android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/createNewDocButton"/>
    <Button
            android:text="@string/search_doc_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/searchForDoc"
            app:layout_constraintStart_toEndOf="@+id/docNameInputField" android:layout_marginStart="16dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/docNameInputField"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            android:onClick="onFindDocumentClick"/>
    <Button
            android:text="@string/create_doc_button"
            android:layout_width="wrap_content"
            android:layout_height="49dp"
            android:id="@+id/createNewDocButton"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="44dp"
            app:layout_constraintTop_toBottomOf="@+id/textView" app:layout_constraintHorizontal_bias="0.497"
            android:onClick="onCreateNewDocument"/>
    <TextView
            android:text="@string/av_documents_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/avDocDescTextView"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintHorizontal_bias="0.575" android:layout_marginTop="36dp"
            app:layout_constraintTop_toBottomOf="@+id/docNameInputField"/>
    <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/avDocSpinner"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp"
            app:layout_constraintHorizontal_bias="1.0" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/avDocDescTextView"/>
    <Button
            android:text="@string/edit_doc_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/editDocButton" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/avDocSpinner"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp" android:onClick="onEditDocumentClick"
    />
    <android.support.constraint.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="181dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:id="@+id/RatePanel" android:layout_marginBottom="28dp"
            app:layout_constraintBottom_toBottomOf="parent" android:visibility="gone"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/editDocButton"
            app:layout_constraintVertical_bias="0.943">

        <RadioButton
                android:text="@string/yes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/radioButtonYes" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="64dp"
                android:layout_marginTop="52dp"
                app:layout_constraintTop_toTopOf="parent"
                android:textSize="14sp"/>
        <RadioButton
                android:text="@string/maybe"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/radioButtonMaybe" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="64dp"
                android:layout_marginTop="52dp"
                app:layout_constraintTop_toTopOf="parent"/>
        <RatingBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ratingBar"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp" android:layout_marginBottom="96dp"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.495"
                android:visibility="gone"
                android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/textView3"/>
        <TextView
                android:text="TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView3"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"/>
        <Button
                android:text="Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/acceptRateButton" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/ratingBar" android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp" android:visibility="gone"
                app:layout_constraintHorizontal_bias="0.498" app:layout_constraintVertical_bias="0.0"
                android:onClick="acceptRate"/>
    </android.support.constraint.ConstraintLayout>
    <Button
            android:text="@string/read"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/readButton"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/avDocSpinner" android:onClick="onReadClick"/>
</android.support.constraint.ConstraintLayout>